---
source: compiler-core/src/javascript/tests/todo.rs
expression: "\npub fn go() {\n  todo as \"I should do this\"\n}\n"
---
----- SOURCE CODE

pub fn go() {
  todo as "I should do this"
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go() {
  throw makeError("todo", FILEPATH, "my/mod", 3, "go", "I should do this", {})
}
